--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
     <form action="student" method="post">
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name">
+        <label for="name">Name</label><br>
+        <input type="text" name="name" id="name"><br>
 
-        <label for="birthdate">birthdate</label>
-        <input type="text" name="birthdate" id="birthdate">
+        <label for="birthdate">Birthdate</label><br>
+        <input type="text" name="birthdate" id="birthdate"><br>
 
-        <label for="phone">phone</label>
-        <input type="text" name="phone" id="phone">
+        <label for="phone">Phone</label><br>
+        <input type="text" name="phone" id="phone"><br>
 
-        <label for="email">email</label>
-        <input type="text" name="email" id="email">
+        <label for="email">Email</label><br>
+        <input type="text" name="email" id="email"><br>
 
-        <label for="address">email</label>
-        <input type="text" name="address" id="address">
+        <label for="address">Address</label><br>
+        <input type="text" name="address" id="address"><br>
 
-        <label for="gender">gender</label>
-        <input type="text" name="gender" id="gender">
+        <label for="gender">Gender</label><br>
+        <input type="text" name="gender" id="gender"><br>
         
-        <button id="addStudent">submit</button>
+        <button type="button" id="addStudent">submit</button>
 
     </form>
 
