--- a/index.html
+++ b/index.html
@@ -7,30 +7,35 @@
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    <form action="student" method="post">
+    <form action="addStudent" method="post">
         <label for="name">Name</label><br>
         <input type="text" name="name" id="name"><br>
 
         <label for="birthdate">Birthdate</label><br>
-        <input type="text" name="birthdate" id="birthdate"><br>
+        <input type="date" name="birthdate" id="birthdate"><br>
 
         <label for="phone">Phone</label><br>
         <input type="text" name="phone" id="phone"><br>
 
         <label for="email">Email</label><br>
-        <input type="text" name="email" id="email"><br>
+        <input type="email" name="email" id="email"><br>
 
         <label for="address">Address</label><br>
         <input type="text" name="address" id="address"><br>
 
         <label for="gender">Gender</label><br>
-        <input type="text" name="gender" id="gender"><br>
+        <input list="genderList" name="gender" id="gender">
+        <datalist id="genderList">
+            <option value="Male">
+            <option value="Female">
+        </datalist>
+        <br>
         
         <button type="button" id="addStudent">submit</button>
 
     </form>
 
     <div id="table"></div>
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
